--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "author": "chandrapenugonda",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "config": "^3.2.5",
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
+    "morgan": "^1.9.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "babel-watch": "^7.0.0",
     "concurrently": "^5.0.2",
